# vectorlink.py

./: .gitignore  README.md  flake.nix  hello.py  pyproject.toml
nix/: uv-python.nix  uv-shell.nix
vectorlink/: dedup.py  index.py  openai_vectorize.py  records.py  template.py  text_chunking_script.py  utils.py
vectorlink/chunking/: __init__.py  protocol.py  schema.py  token_window.py
vectorlink/embedding/: dedup.py  embed.py  openai_vectorize.py
vectorlink/question/: __init__.py
vectorlink_py/: dedup.py  embed.py  openai_vectorize.py  records.py  template.py  vectorize.py
