[project]
name = "vectorlink-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "datafusion>=43.1.0",
    "openai>=1.59.6",
    "pandas-stubs>=2.2.3.241126",
    "pandas>=2.2.3",
    "pybars3>=0.9.7",
]
