[project]
name = "vectorlink"
version = "0.1.0"
description = "VectorLink.ai user library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "black>=24.10.0",
    "datafusion>=43.1.0",
    "openai>=1.59.6",
    "pandas-stubs>=2.2.3.241126",
    "pandas>=2.2.3",
    "pybars3>=0.9.7",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
